[package]
name = "catnip"
version = "0.8.0"
authors = [ "Microsoft Corporation" ]
description = "Fast User-Space TCP/UDP Stack"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/catnip"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2018"

[dependencies]
arrayvec = "0.7.2"
async-trait = "0.1.52"
byteorder = "1.4.3"
crc = "1.8.1"
crossbeam-channel = "0.5.2"
derive_more = "0.99.17"
either = "1.6.1"
eui48 = "1.1.0"
flexi_logger = { version = "0.22.2", features = ["colors", "use_chrono_for_offset"] }
float_duration = "0.3.3"
futures = "0.3.19"
libc = "0.2.115"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = { version = "0.8.4", features = ["small_rng"] }

perftools = { git = "https://github.com/demikernel/perftools", rev = "10740b3c46440f4eef740c401d8fd2385998c16a" }
runtime = { git = "https://github.com/demikernel/runtime", rev = "39d5f4e979de3f2372a72c6dea33befb6a9cea38"}
catwalk= { git = "https://github.com/demikernel/catwalk", rev = "771ebb4f04692cf49b58dd84e6c31d4f817069d0"}

[dev-dependencies]
criterion = "0.3.4"

[features]
threadunsafe = []
profiler = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false